bdr.BDR.scala.error
Compilation error:
BDR:2: error: value getIndication is not a member of String
  var message =readMessage().getIndication();
                             ^